# civil-toolbox

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENGINEERING_STANDARDS.md  README.md  ROADMAP.md  SECURITY.md  TASKSPEC_headless.civil-toolbox.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  engineering_method.md  feature_request.md
.github/workflows/: test.yml
civil_toolbox/: __init__.py
civil_toolbox/adapters/: __init__.py  errors.py  rational_method.py  result_builder.py  scenario_helpers.py  time_of_concentration.py  tr55.py
civil_toolbox/calculators/: __init__.py  kinematic_wave.py  rational_method.py  time_of_concentration.py  tr55.py  validation.py
civil_toolbox/comparison/: __init__.py  aggregation.py  matching.py  metrics.py  models.py  scenario_comparison.py  storm_sensitivity.py  validation.py
civil_toolbox/design_criteria/: __init__.py  criteria.py  errors.py  examples.py  libraries.py  validation.py
civil_toolbox/domain/: __init__.py  base.py  calculation.py  drainage.py  flow_path.py  infrastructure.py  project.py  scenario.py  storm.py  (+1 more)
docs/: adapters.md  calculation-engine.md  comparison.md  design-criteria-libraries.md  domain-model.md  gis-workflows.md  hydraulic-grade-line.md  idf-curves.md  infrastructure-modeling.md  infrastructure-reporting.md  infrastructure-sizing.md  pdf-report-export.md  project-file-format.md  references.md  report-templates.md  reporting.md  storm-sensitivity-comparison.md  verification.md
tests/: README.md  __init__.py
(+178 files in other folders)
