[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "civil-toolbox"
version = "0.1.0"
description = "Drainage Analysis & Infrastructure Planning Workstation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "HanzoRazer"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
keywords = ["civil engineering", "hydrology", "drainage", "stormwater"]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
pdf = [
    "weasyprint>=60.0",
    "markdown>=3.0",
]
all = [
    "weasyprint>=60.0",
    "markdown>=3.0",
]

[project.urls]
Homepage = "https://github.com/HanzoRazer/civil-toolbox"
Repository = "https://github.com/HanzoRazer/civil-toolbox"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
